[package]
name = "rustcast"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.5"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }