[package]
name = "rustcast"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.8", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.8"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
